--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <b>6. Audited Financial Statements</b> - Providing you with professionally audited financial statements for compliance and decision-making.<br>
     <b>7. BIR Open Cases</b> - Assisting with BIR open cases and compliance issues.<br>
 
+    <img src="ATMAT Logo.jpg" width="200px" height="200">
     <img src="DTI.png" width="200px" height="200">
     <img src="BIR.png" width="200px" height="200">
     <img src="Receipts.webp" width="200px" height="200">
