--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <b>7. BIR Open Cases</b> - Assisting with BIR open cases and compliance issues.<br>
 
     <img src="ATMAT Logo.jpg" width="150px" height="200">
+    <img src="Permits.jpg" width="150px" height="200">
     <img src="DTI.png" width="150px" height="200">
     <img src="BIR.png" width="150px" height="200">
     <img src="Receipts.webp" width="150px" height="200">
