--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <center><h1 style="color: red;">Simplify Your Business Finances with ATMAT Bookkeeping Services!</h1></center>
     <center><h2>Are bookkeeping tasks taking up too much of your time?<br>Let us help you keep your finances in order so you can focus on growing your business!</h2></center>
     <h3>🔹 Why Choose Our Services?</h3>
-    
+    <table border="0.05>
+    <th></th>
     <b>1. Accurate Financial Records</b> - We ensure your books are kept accurate and up-to-date.<br>
     <b>2. Save Time</b> - Spend more time on your business while we handle your bookkeeping.<br>
     <b>3. Affordable Rates</b> - Quality service without breaking the bank.<br>
@@ -35,5 +36,6 @@
     Email: <a href="mailto:atmatbookkeepingservices724@gmail.com">atmatbookkeepingservices724@gmail.com</a>*****
     Facebook Page: <a href="https://facebook.com/">ATMAT Bookkeeping Services</a>*****
     Cellphone Number: <a href="tel:09153559615">09153559615</a>
+    </table>
 </body>
 </html>
